Revert "Merge branch 'main' of https://github.com/MassInCode/Projeto_Tp1_2025_2"
This reverts commit 5ba49d102c98e8e18d7b2fd88bd19da6a2a29ce6, reversing
changes made to 7ea733f35cf7411bffb5003518e8abf6ef18ff11.

--- a/src/main/resources/com/Projeto_Tp1_2025_2/view/Admin/admin.fxml
+++ b/src/main/resources/com/Projeto_Tp1_2025_2/view/Admin/admin.fxml
@@ -81,6 +81,7 @@
                            </font>
                         </Label>
                         <Separator orientation="VERTICAL" prefHeight="40.0" visible="false" />
+                        <Button fx:id="btn_candidato" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#alterarPerfil" prefHeight="30.0" prefWidth="200.0" text="Candidato" textFill="WHITE" />
                         <Button fx:id="btn_recrutador" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#alterarPerfil" prefHeight="30.0" prefWidth="200.0" text="Recrutador" textFill="WHITE" />
                         <Button fx:id="btn_gestor" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#alterarPerfil" prefHeight="30.0" prefWidth="200.0" text="Gestor" textFill="WHITE" />
                         <Separator orientation="VERTICAL" prefHeight="20.0" visible="false" />
