--- a/src/main/resources/com/Projeto_Tp1_2025_2/view/Admin/gestao.fxml
+++ b/src/main/resources/com/Projeto_Tp1_2025_2/view/Admin/gestao.fxml
@@ -116,7 +116,7 @@
       </AnchorPane>
       <AnchorPane fx:id="criacaoVagaJanela" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: rgba(0,0,0,0.5);" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <AnchorPane layoutX="422.0" layoutY="105.0" prefHeight="440.0" prefWidth="415.0" styleClass="telaaction" AnchorPane.bottomAnchor="175.0" AnchorPane.leftAnchor="422.0" AnchorPane.rightAnchor="443.0" AnchorPane.topAnchor="105.0">
+            <AnchorPane layoutX="422.0" layoutY="105.0" prefHeight="440.0" prefWidth="415.0" styleClass="telaaction">
                <children>
                   <VBox alignment="CENTER" layoutX="127.0" layoutY="52.0" prefHeight="437.0" prefWidth="414.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
