--- a/src/main/resources/com/Projeto_Tp1_2025_2/view/Admin/gestao.fxml
+++ b/src/main/resources/com/Projeto_Tp1_2025_2/view/Admin/gestao.fxml
@@ -2,21 +2,15 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.effect.Blend?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.Region?>
-<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -68,9 +62,9 @@
                                  <columns>
                                     <TableColumn fx:id="colunaCandidato" prefWidth="231.0" text="Candidato" />
                                     <TableColumn fx:id="colunaVaga" prefWidth="204.0" text="Vaga" />
-                                    <TableColumn fx:id="colunaData" prefWidth="143.0" text="Data Contratação" />
-                                    <TableColumn fx:id="colunaPRegime" prefWidth="204.0" text="Regime" />
-                                    <TableColumn fx:id="colunaAutorizado" prefWidth="170.0" text="Autorizado" />
+                                    <TableColumn fx:id="colunaData" prefWidth="191.0" text="Data Contratação" />
+                                    <TableColumn fx:id="colunaPRegime" prefWidth="179.0" text="Regime" />
+                                    <TableColumn fx:id="colunaAutorizado" prefWidth="218.0" text="Autorizado" />
                                  </columns>
                               </TableView>
                            </children>
@@ -81,42 +75,9 @@
             </HBox>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="janelaSobreposta" layoutX="10.0" layoutY="10.0" style="-fx-background-color: rgba(0,0,0,0.5);" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <children>
-            <StackPane alignment="CENTER" style="-fx-background-color: transparent;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-               <children>
-                  <VBox alignment="CENTER" prefHeight="300" prefWidth="500" style="-fx-background-color: null; -fx-padding: 20; -fx-background-radius: 10;">
-                     <children>
-                        <Pane prefHeight="200.0" prefWidth="895.0">
-                           <children>
-                              <Pane layoutX="495.0" layoutY="-69.0" prefHeight="339.0" prefWidth="250.0" style="-fx-background-color: white;" stylesheets="@admin.css">
-                                 <children>
-                                    <Label layoutX="23.0" layoutY="26.0" prefHeight="68.0" prefWidth="205.0" style="-fx-font-size: 18px;" text="Tamo exportando, tamo exportando" />
-                                    <Button layoutX="73.0" layoutY="250.0" onAction="#fecharJanela" prefHeight="55.0" prefWidth="105.0" text="EXPORTAR" />
-                                    <CheckBox layoutX="70.0" layoutY="188.0" mnemonicParsing="false" text="Eu sou um robo?" />
-                                    <MenuButton layoutX="55.0" layoutY="119.0" mnemonicParsing="false" text="Onde que eu coloco">
-                                       <items>
-                                          <MenuItem mnemonicParsing="false" text="Action 1" />
-                                          <MenuItem mnemonicParsing="false" text="Action 2" />
-                                       </items>
-                                    </MenuButton>
-                                    <Button layoutX="223.0" layoutY="2.0" mnemonicParsing="false" onAction="#fecharJanela" prefHeight="25.0" prefWidth="24.0" style="-fx-background-color: red;" text="X" />
-                                 </children>
-                                 <effect>
-                                    <Blend />
-                                 </effect>
-                              </Pane>
-                           </children>
-                        </Pane>
-                     </children>
-                  </VBox>
-               </children>
-            </StackPane>
-         </children>
-      </AnchorPane>
       <AnchorPane fx:id="criacaoVagaJanela" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: rgba(0,0,0,0.5);" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <AnchorPane layoutX="422.0" layoutY="105.0" prefHeight="440.0" prefWidth="415.0" styleClass="telaaction">
+             <AnchorPane layoutX="422.0" layoutY="105.0" prefHeight="440.0" prefWidth="415.0" styleClass="telaaction" AnchorPane.bottomAnchor="175.0" AnchorPane.leftAnchor="422.0" AnchorPane.rightAnchor="443.0" AnchorPane.topAnchor="105.0">
                <children>
                   <VBox alignment="CENTER" layoutX="127.0" layoutY="52.0" prefHeight="437.0" prefWidth="414.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
@@ -151,7 +112,7 @@
                               <Insets left="10.0" right="10.0" />
                            </VBox.margin>
                         </TextField>
-                        <Label fx:id="cv_error" prefHeight="27.0" prefWidth="370.0" textFill="RED">
+                        <Label fx:id="cv_error" alignment="CENTER" prefHeight="27.0" prefWidth="370.0" textFill="RED">
                            <font>
                               <Font name="System Bold" size="13.0" />
                            </font>
